Revert "Add .keep file to spec/dummy/tmp/cache/"
This reverts commit 09e124c8fc302aed45ff16a3003c7b1441e28f86.
No longer need

--- a/.gitignore
+++ b/.gitignore
@@ -112,10 +112,7 @@ bower.json
 ## Rails engine
 spec/dummy/log
 spec/dummy/log
-spec/dummy/tmp/*
-!/spec/dummy/tmp/cache/
-/spec/dummy/tmp/cache/*
-!/spec/dummy/tmp/cache/.keep
+spec/dummy/tmp
 spec/dummy/db/*.sqlite3
 spec/dummy/public/system
 spec/dummy/coverage/
